force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/boondId__c.field-meta.xml
<CustomField>
    <fullName>boondId__c</fullName>
    <externalId>true</externalId>
    <label>boondId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>