force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Civility__c.field-meta.xml
<CustomField>
    <fullName>Civility__c</fullName>
    <label>Civility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mme.</fullName>
            </value>
            <value>
                <fullName>M.</fullName>
            </value>
            <value>
                <fullName>Ind.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>