force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Graduation_year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_year__c</fullName>
    <label>Graduation year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>