force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Lead_Generator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Generator</label>
    <referenceTo>SFL5__SFL5_Resource__c</referenceTo>
    <relationshipLabel>Resources (Lead Generator)</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>