force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>SFL5__SFL5_Resource__c</referenceTo>
    <relationshipLabel>Team</relationshipLabel>
    <relationshipName>direct_report</relationshipName>
    <type>Lookup</type>
</CustomField>