force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Min_Salary_expectations_kEu__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary_expectations_kEu__c</fullName>
    <label>Min Salary expectations (kEu)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>