force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Mobile_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_1__c</fullName>
    <label>Mobile 1</label>
    <type>Phone</type>
</CustomField>