force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Mobile_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_2__c</fullName>
    <label>Mobile 2</label>
    <type>Phone</type>
</CustomField>