force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Mobile_3__c.field-meta.xml
<CustomField>
    <fullName>Mobile_3__c</fullName>
    <label>Mobile 3</label>
    <type>Phone</type>
</CustomField>