force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Mobility__c.field-meta.xml
<CustomField>
    <fullName>Mobility__c</fullName>
    <label>Mobility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>