force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Perfect_mission__c.field-meta.xml
<CustomField>
    <fullName>Perfect_mission__c</fullName>
    <label>Perfect mission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>