force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Place_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Place_of_birth__c</fullName>
    <label>Place of birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>