force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Profil__c.field-meta.xml
<CustomField>
    <fullName>Profil__c</fullName>
    <label>Profil</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment manager</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
                <default>true</default>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Business engineer</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>RH Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>