force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/RH__c.field-meta.xml
<CustomField>
    <fullName>RH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RH</label>
    <referenceTo>SFL5__SFL5_Resource__c</referenceTo>
    <relationshipLabel>Resources (RH)</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>