force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Apec</fullName>
            </value>
            <value>
                <fullName>Cooptation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>