force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
                <default>true</default>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Initial contact</fullName>
            </value>
            <value>
                <fullName>EC1</fullName>
            </value>
            <value>
                <fullName>EC2</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>EC3</fullName>
            </value>
            <value>
                <fullName>Not Recruited</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>