force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sortie</fullName>
                <color>#000000</color>
                <label>Sortie</label>
            </value>
            <value>
                <fullName>Candidat à traiter</fullName>
                <color>#FFCC66</color>
                <label>Candidat à traiter</label>
            </value>
            <value>
                <fullName>Candidat en process</fullName>
                <color>#E27001</color>
                <label>Candidat en process</label>
            </value>
            <value>
                <fullName>OKSI (pipe froid) (vivier)</fullName>
                <color>#0B6FCE</color>
                <label>OKSI (pipe froid) (vivier)</label>
            </value>
            <value>
                <fullName>OK</fullName>
                <color>#78C953</color>
                <label>OK</label>
            </value>
            <value>
                <fullName>OKSI (pipe chaud)</fullName>
                <color>#A845DC</color>
                <label>OKSI (pipe chaud)</label>
            </value>
            <value>
                <fullName>NOK</fullName>
                <color>#FF0000</color>
                <label>NOK</label>
            </value>
            <value>
                <fullName>Recruté !</fullName>
                <color>#006600</color>
                <label>Recruté !</label>
            </value>
            <value>
                <fullName>Ne plus contacter</fullName>
                <color>#000000</color>
                <label>Ne plus contacter</label>
            </value>
            <value>
                <fullName>En cours</fullName>
                <color>#0B6FCE</color>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Intercontrat</fullName>
                <color>#E27001</color>
                <label>Intercontrat</label>
            </value>
            <value>
                <fullName>Non défini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>