force-app/main/default/objects/SFL5__SFL5_Resource__c/fields/Tracks__c.field-meta.xml
<CustomField>
    <fullName>Tracks__c</fullName>
    <label>Tracks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>