force-app/main/default/objects/SFL5__SFL5_Resource__c/listViews/Candidate.listView-meta.xml
<ListView>
    <fullName>Candidate</fullName>
    <columns>boondId__c</columns>
    <columns>Civility__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Profil__c</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFL5__SFL5_Resource__c.Candidate</value>
    </filters>
    <label>Candidate</label>
</ListView>