force-app/main/default/objects/SFL5__SFL5_Resource__c/listViews/Employee.listView-meta.xml
<ListView>
    <fullName>Employee</fullName>
    <columns>boondId__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Civility__c</columns>
    <columns>NAME</columns>
    <columns>Profil__c</columns>
    <columns>SFL5__External_Resource__c</columns>
    <columns>Manager__c</columns>
    <columns>RH__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFL5__SFL5_Resource__c.Employee</value>
    </filters>
    <label>Employee</label>
</ListView>